operator/pkg/gateway-api/testdata/gateway/gateway-observed-generation-bump/input/gateway-observed-generation-bump.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-observed-generation-bump
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      hostname: "bar.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
